<resources>
    <string name="app_name">DaiQu</string>
    <string name="app_name_cn">喵趣</string>
    <string name="app_name_cn2">(=￣ω￣=) 喵~</string>
    <string name="rob">接单</string>
    <string name="my">我的</string>
    <string name="faxian">发现</string>
    <string name="home">首页</string>
    <string name="splash_title">3Q</string>
    <string name="splash_text">\©2017 3Q.com All Rights Reserved</string>
    <string name="sign_in">登录</string>
    <string name="sign_up">注册</string>
    <string name="login_name_hint">手机号</string>
    <string name="login_password_hint">数字加字母，8~16位</string>
    <string name="login_message_hint">短信验证码</string>
    <string name="to_main_page">进入首页</string>
    <string name="package_info_title">填写订单信息</string>
    <string name="phone">电话：</string>
    <string name="company">物流公司：</string>
    <string name="pickUp_address">取货地址：</string>
    <string name="arrive_address">送达地址：</string>
    <string name="name">姓名：</string>
    <string name="arrive_time">送达时间：</string>
    <string name="pickUp_code">取货码：</string>
    <string name="confirm">提交</string>
    <string name="price">价格：</string>
    <string name="price_small">3元（小包裹）</string>
    <string name="price_big">5元(大包裹)</string>
    <string name="authentication_tips">接单需要进行身份验证，一分钟即可呦~</string>
    <string name="immediate_authen">立即认证</string>
    <string name="confirm_tips">请确认以上信息正确无误，发布成功后不可修改，点击确认立即发布。</string>
    <string name="back_to_home">返回首页</string>
    <string name="send_success">发送成功，请到“我的”查看进度。</string>
    <string name="all_buy">大家都在买</string>
    <string name="buy_price">￥ 9.9</string>
    <string name="buy_num">970人已购</string>
    <string name="buy_name">AA同款小背心欧美风...</string>
    <string name="my_name">懒喵喵</string>
    <string name="my_phone">18876851234</string>
    <string name="order">订单</string>
    <string name="give_money">打赏</string>
    <string name="shopping">购物</string>
    <string name="setting">设置</string>
    <string name="add_info">宝贝，请补全你的信息</string>
    <string name="user_name">昵称：</string>
    <string name="school">学校：</string>
    <string name="common_address">常用收货地址：</string>
    <string name="queren">确认</string>
    <string name="sure_message">喵~，您的信息已经保存成功了，快去发单吧！</string>
    <string name="order_ensrue_message">宝贝，您确认收到了货物吗？</string>
    <string name="assessment">评价</string>
    <string name="assessment_tips">宝贝，给喵星人打个分吧~</string>
    <string name="assessment_reward">喵喵不易，给TA点鼓励吧~</string>
    <string name="assessment_reward_tips">您的打赏将直接转给喵星人！</string>
    <string name="assessment_saved">喵星人已收到您的评价么么哒~</string>
    <string name="pay">支付</string>
</resources>
