<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_weight="1"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="124dp"
        android:layout_height="132dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/taobao" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view"
        android:text="@string/buy_price"
        android:textColor="@color/OrangeRed"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/num"
        android:paddingLeft="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/price"
        android:text="@string/buy_num"
        android:textSize="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view"
        android:layout_toRightOf="@id/price"
        android:padding="3dp"
        android:textSize="11sp"
        android:text="@string/buy_name" />
</RelativeLayout>