<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@color/Black"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <TextView
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:text="@string/my"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/title_my"
        android:padding="10dp"
        android:background="@color/bottom_bar_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/my_head_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/head_iamge" />

        <TextView
            android:id="@+id/my_name"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/my_name"
            android:layout_alignStart="@+id/my_phone" />

        <TextView
            android:id="@+id/my_phone"
            android:paddingLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/my_phone"
            android:layout_marginBottom="10dp"
            android:layout_alignBottom="@+id/my_head_image"
            android:layout_toEndOf="@+id/my_head_image" />

        <ImageButton

            android:id="@+id/imageButton"
            android:background="@drawable/go"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/my_order"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:background="@color/bottom_bar_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/my_package"
            android:layout_width="30dp"
            android:layout_height="30dp" />
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:text="@string/order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/give_money"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:background="@color/bottom_bar_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/give_money"
            android:layout_width="30dp"
            android:layout_height="30dp" />
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:text="@string/give_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/shopping"
        android:layout_marginTop="2dp"
        android:padding="10dp"
        android:background="@color/bottom_bar_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/shopping"
            android:layout_width="30dp"
            android:layout_height="30dp" />
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:text="@string/shopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting"
        android:layout_marginTop="2dp"
        android:padding="10dp"
        android:background="@color/bottom_bar_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/setting"
            android:layout_width="30dp"
            android:layout_height="30dp" />
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:text="@string/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>