<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:background="@color/Black"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <Button
            android:id="@+id/order_info_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/back" />

        <ImageView
            android:visibility="gone"
            android:layout_marginRight="10dp"
            android:id="@+id/imageView"
            android:layout_gravity="right|center_vertical"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/order_message" />

        <TextView
            android:id="@+id/order_info_title_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/assessment"
            android:textColor="@color/white" />
    </FrameLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/assessment_tips"
        android:textSize="17sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/RadingStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:numStars="5"
        android:rating="4.5" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        android:background="@drawable/assessment_edit_bg" />

    <Button
        android:id="@+id/assessment_sure_btn"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_gravity="center|bottom"
        android:layout_marginTop="9dp"
        android:background="@drawable/send_confirm_btn_bg"
        android:text="@string/confirm"
        android:textColor="@color/white" />

    <TextView
        android:layout_marginTop="10dp"
        android:background="@color/bottom_bar_white"
        android:text="@string/assessment_reward"
        android:paddingLeft="20dp"
        android:padding="10dp"
        android:textSize="17sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginLeft="10dp"
            android:id="@+id/iamge"
            android:src="@drawable/person_head"
            android:layout_width="70dp"
            android:layout_height="70dp" />
        <TextView
            android:text="王大锤"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:layout_toRightOf="@+id/iamge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="已顺利完成99单"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:layout_alignBottom="@+id/iamge"
            android:layout_toRightOf="@+id/iamge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_toLeftOf="@+id/wwwww"
            android:layout_alignBottom="@+id/wwwww"
            android:background="@color/confirm_btn"
            android:layout_width="1dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/wwwww"
            android:layout_margin="10dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/assenmet_phone"
            android:layout_width="50dp"
            android:layout_height="50dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/price_1"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:src="@drawable/price_2"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:src="@drawable/price_3"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:src="@drawable/price_4"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/assessment_reward_tips" />

</LinearLayout>