<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_bar_line"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="这是主页"/>
    </LinearLayout>


    <ImageView
        android:id="@+id/bottom_bar_line"
        android:layout_above="@+id/home_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/home_line" />

    <LinearLayout
        android:id="@+id/home_bottom_bar"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/bottom_bar_my"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:layout_weight="1"
                android:src="@drawable/my"
                android:layout_width="match_parent"
                android:layout_height="0dp" />
            <TextView
                android:id="@+id/bottom_bar_my_text"
                android:gravity="center"
                android:text="@string/my"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_bar_home"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:layout_weight="1"
                android:src="@drawable/yuantong"
                android:layout_width="match_parent"
                android:layout_height="0dp" />
            <TextView
                android:id="@+id/bottom_bar_home_text"
                android:gravity="center"
                android:text="@string/home"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_bar_faxian"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:layout_weight="1"
                android:src="@drawable/faxian"
                android:layout_width="match_parent"
                android:layout_height="0dp" />
            <TextView
                android:id="@+id/bottom_bar_faxian_text"
                android:gravity="center"
                android:text="@string/faxian"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>