<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.daiqu.cm.daiqu.MainActivity">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/logo"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/login_logo"
        android:id="@+id/linearLayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/phone"/>
            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:textColor="#2c2c2c"
                android:textSize="18dp"
                android:gravity="bottom"
                android:text="："/>
            <EditText
                android:id="@+id/login_name"
                android:layout_width="0dp"
                android:background="@null"
                android:layout_weight="1"
                android:layout_marginLeft="3dp"
                android:gravity="bottom"
                android:textColorHint="#dbdbdb"
                android:textSize="18dp"
                android:hint="@string/login_name_hint"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_height="2dp"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="15dp"
            android:background="#dbdbdb"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="26dp">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/message"/>
            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:textColor="#2c2c2c"
                android:textSize="18dp"
                android:gravity="bottom"
                android:text="："/>
            <EditText
                android:id="@+id/login_message"
                android:layout_width="0dp"
                android:background="@null"
                android:layout_weight="1"
                android:layout_marginLeft="3dp"
                android:hint="@string/login_message_hint"
                android:gravity="bottom"
                android:textColorHint="#dbdbdb"
                android:textSize="18dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/txt_get_message"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="#fff"
                android:textSize="10dp"
                android:gravity="center"
                android:padding="7dp"
                android:paddingTop="9dp"
                android:paddingBottom="9dp"
                android:background="@drawable/txt_bg_normal"
                android:text="获取验证码"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="15dp"
            android:background="#dbdbdb"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/password"/>
            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:textColor="#2c2c2c"
                android:textSize="18dp"
                android:gravity="bottom"
                android:text="："/>
            <EditText
                android:id="@+id/login_password"
                android:layout_width="0dp"
                android:background="@null"
                android:layout_weight="1"
                android:layout_marginLeft="3dp"
                android:gravity="bottom"
                android:textColorHint="#dbdbdb"
                android:textSize="18dp"
                android:hint="@string/login_password_hint"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="10dp"
            android:background="#dbdbdb"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/linearLayout"
        android:layout_height="35dp">
        <Button
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:textSize="18dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg_normal"
            android:text="@string/sign_up" />
    </RelativeLayout>

</RelativeLayout>
